welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:5: error: too many arguments for method isFacingTrail: ()Boolean
		if(isFacingTrail(c)) {avance;baisseBrosse;leveBrosse;}
                                ^